--- a/index.htm
+++ b/index.htm
@@ -984,7 +984,7 @@ a.contact:hover {
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
 <h1 id="text.title">PrivateNote - Safe storage of notes and to-do list</h1>
-<h2 id="text.subtitle">google-site-verification: google8e7870df47c91b6f.html</h2>
+<p><a href="https://disk.yandex.by/d/F_pg2DJgVZ-sww">Download</a></p>
 </div>
 </div>
 </div>
@@ -999,8 +999,8 @@ a.contact:hover {
 </div>
 <div id="attribution">
 <!-- <p><a href="/">Homepage</a></p> -->
-<p>App <a href="https://privatenote.flycricket.io/privacy.html">Privacy Policy</a></p>
-<p>App <a href="https://privatenote.flycricket.io/terms.html">Terms &amp; Conditions</a></p>
+<p>App <a href="privacy.htm">Privacy Policy</a></p>
+<p>App <a href="terms.htm">Terms &amp; Conditions</a></p>
 <p>
 						Background Image by freepik
 						on <a href="http://www.freepik.com/" target="_blank">www.freepik.com</a>
