--- a/privacy.htm
+++ b/privacy.htm
@@ -1025,7 +1025,7 @@ a.contact:hover {
 <link href="privacy_files/css.css" rel="stylesheet">
 </head>
 <body style="background:#222;margin:0;">
-<div style="background:#eee;">
+<div style="background:#ert;">
 <div class="container">
 <div id="fc123-custom-area">
 <a onclick="_fc_clicked()">
