update for google verification

--- a/index.htm
+++ b/index.htm
@@ -983,6 +983,16 @@ a.contact:hover {
 <div class="text-container">
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
+<h1 id="text.title">What does the application do with user data</h1>
+<p1 id="text.title">The application collects data according to the <a href="privacy.htm">Privacy Policy</a></p1>
+<div class="text-container">
+<div class="tc-table">
+<div style="display:table-cell;vertical-align:middle;">
+<h1 id="text.title">What does the application do?</h1>
+<p1 id="text.title">The application simplifies everyday life by allowing you to take notes so as not to forget important information, a to-do list so that there is nothing to forget. You can encrypt notes that are important to you, thereby protecting them.App supports backup, local on the device, as well as on google drive.</p1>
+<div class="text-container">
+<div class="tc-table">
+<div style="display:table-cell;vertical-align:middle;">
 <h1 id="text.title">PrivateNote - Safe storage of notes and to-do list</h1>
 <p><a href="https://disk.yandex.by/d/n1mxIeKvDjyY2w">Download</a></p>
 </div>
@@ -990,7 +1000,12 @@ a.contact:hover {
 </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
 </div></div>
+</div>
 <footer><footer>
 <div class="container">
 <div class="row">
