Очередная правка для google

--- a/index.htm
+++ b/index.htm
@@ -984,7 +984,7 @@ a.contact:hover {
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
 <h1 id="text.title">What does the application do with user data</h1>
-<p1 id="text.title">The application collects data according to the <a href="privacy.htm">Privacy Policy</a></p1>
+<p1 id="text.title">The data that the application receives will not be transferred anywhere and will be stored locally, with the exception of data on crashes, errors, and data on the device model. This information is collected in anonymous form, you can read the details in <a href="privacy.htm">Privacy Policy</a></p1>
 <div class="text-container">
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
