Добавление иконки на сайт

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,5 @@
 <html data-lt-installed="true"><head>
+ <link rel="icon" href="icon.ico"><!-- 32×32 -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 <link href="index_files/css_002.css" rel="stylesheet">
@@ -981,6 +982,7 @@ a.contact:hover {
 <img src="index_files/06552660-54bf-44dc-9abd-4bc7a27f56f7.png" template-editable="meta.image" template-section="" template-type="image">
 </div>
 <div class="text-container">
+<img src="icon.ico" alt="альтернативный текст">
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
 <h1 id="text.title">What does the application do with user data</h1>
