--- a/terms.htm
+++ b/terms.htm
@@ -1,4 +1,5 @@
 <html data-lt-installed="true"><head>
+<link rel="icon" href="icon.ico"><!-- 32×32 -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 
