--- a/index.htm
+++ b/index.htm
@@ -996,7 +996,7 @@ a.contact:hover {
 <div class="tc-table">
 <div style="display:table-cell;vertical-align:middle;">
 <h1 id="text.title">PrivateNote - Safe storage of notes and to-do list</h1>
-<p><a href="https://disk.yandex.by/d/n1mxIeKvDjyY2w">Download</a></p>
+<p><a href="https://disk.yandex.by/d/48J1ZjpGL6Xb4A">Download</a></p>
 </div>
 </div>
 </div>
