update privacy and terms 11.11.2022

--- a/terms.htm
+++ b/terms.htm
@@ -1105,9 +1105,7 @@ a.contact:hover {
                   bear in mind that although we endeavor to ensure that it is
                   updated and correct at all times, we do rely on third parties
                   to provide information to us so that we can make it available
-                  to you. xXMRK888YTXx  accepts no liability for any
-                  loss, direct or indirect, you experience as a result of
-                  relying wholly on this functionality of the app.
+                  to you.xXMRK888YTXx accepts no liability for any loss, direct or indirect, you experience as a result of relying on app.
                 </p> <p>
                   At some point, we may wish to update the app. The app is
                   currently available on Андроид – the requirements for the 
@@ -1126,13 +1124,9 @@ a.contact:hover {
                   (b) you must stop using the app, and (if needed) delete it
                   from your device.
                 </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
-                  I may update our Terms and Conditions
-                  from time to time. Thus, you are advised to review this page
-                  periodically for any changes. I will
-                  notify you of any changes by posting the new Terms and
-                  Conditions on this page.
+                  In the event of any changes to the privacy policy, we will replace this document with a newer version. To keep abreast of changes, visit this page immediately after updating the application
                 </p> <p>
-                  These terms and conditions are effective as of 2022-10-06
+                  These terms and conditions are effective as of 2022-11-11
                 </p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about my
                   Terms and Conditions, do not hesitate to contact me
