add permission from 12,12 android version

--- a/privacy.htm
+++ b/privacy.htm
@@ -1132,6 +1132,8 @@ legislation. Minors may use this Application only with the assistance of
 <p>Phone/Disable sleep mode - mandatory permission, used to ensure that the screen does not turn off while listening to an audio note</p>
 <p>Phone/Ad ID permission - required permission,used to display ads.</p>
 <p>Phone/Start active services - required permission, used to start background activity for data backup application if you configure this feature.</p> 
+<p>(Android 13)Phone/show notifications - optional permission, used to show notifications with reminders</p>
+<p>(Android 12)Phone/android.permission.SCHEDULE_EXACT_ALARM - required permission, used to send reminders at the time you want.</p>
 <p><strong>Changes to This Privacy Policy</strong></p> <p>
                   In the event of any changes to the privacy policy, we will replace this document with a newer version.  To keep abreast of changes, visit this page immediately after updating the application.
                 </p> <p>This policy is effective as of 2022-11-11</p> <p><strong>Contact Us</strong></p> <p>
