Update WTMP privacy

--- a/wtmp_privacy.htm
+++ b/wtmp_privacy.htm
@@ -1120,10 +1120,29 @@ a.contact:hover {
     legislation. Minors may use this Application only with the assistance of
     a parent or guardian. Under no circumstance persons under the age of 13
     may use this Application.
+
+    <p><strong>Required permissions</strong></p>
+    <p>(Android 13)android.permission.POST_NOTIFICATIONS - Sending notifications if app permissions are revoked  </p>
+    <p>android.permission.REQUEST_DELETE_PACKAGES - Permission is required to be able to remove the application from its settings </p>
+    <p>android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS - Allows you to request that background work restrictions be ignored</p>
+    <p>android.permission.CAMERA - Allows an application to use the device's camera. The camera is used only if you have set the appropriate parameter in the settings. The images taken are stored on the device and are not transferred anywhere (except when you have set the setting to send a copy of the image to Telegram)</p>
+    <p>android.permission.INTERNET - Allows an application to access the Internet. This is necessary for sending messages to telegrams, making purchases, receiving advertising, collecting statistics and device stability. </p>
+    <p>android.permission.QUERY_ALL_PACKAGES - Allows an application to get information about installed packages on the device. This is necessary to display a list of installed applications, get the icon and name of the application.</p>
+    <p>android.permission.RECEIVE_BOOT_COMPLETED - Used to get information about device boot.</p>
+    <p>android.permission.USE_BIOMETRIC - Permission is used for biometric authentication</p>
+    <p>android.permission.USE_FINGERPRINT - Permission is used for biometric authentication</p>
+    <p>com.android.vending.BILLING - Permission to make purchases on Google Play</p>
+    <p>android.permission.ACCESS_NETWORK_STATE - Permission to get network status </p>
+    <p>android.permission.WAKE_LOCK - Permission for Screen Fade Lock option</p>
+    <p>com.google.android.gms.permission.AD_ID - Permission to use advertising ID</p>
+    <p>android.permission.FOREGROUND_SERVICE - Permission to run background services</p>
+    <p>android.permission.BIND_ACCESSIBILITY_SERVICE - The permission allows you to use special services. This functionality is used to get information about open applications and device unlocks. </p>
+    <p>android.permission.BIND_DEVICE_ADMIN - Permissions to use administrator rights on the device. This functionality is used to track incorrect device password entries.</p>
+
 </p></div> <!----> <p><strong>Changes to This Privacy Policy</strong></p> <p>
     In the event of any changes to the privacy policy, we will replace this document with a newer version.
     To keep abreast of changes, visit this page immediately after updating the application.
-</p> <p>This policy is effective as of 2023-01-12</p> <p><strong>Contact Us</strong></p> <p>
+</p> <p>This policy is effective as of 2023-01-23</p> <p><strong>Contact Us</strong></p> <p>
     If you have any questions or suggestions about my
     Privacy Policy, do not hesitate to contact me at xxmrk888ytxx.rlc@gmail.com.
 </p>
