Update privacy policy

--- a/screenretainer_privacy.htm
+++ b/screenretainer_privacy.htm
@@ -1067,7 +1067,7 @@ a.contact:hover {
 </p> <p>
     Link to the privacy policy of third-party service providers used
     by the app
-</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><!----><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+</p> <ul><li><a href="https://www.google.com/policies/privacy/wtmp_privacy.htm" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/wtmp_privacy.htm" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
     I want to inform you that whenever you
     use my Service, in a case of an error in the app
     I collect data and information (through third-party
@@ -1120,6 +1120,19 @@ a.contact:hover {
     legislation. Minors may use this Application only with the assistance of
     a parent or guardian. Under no circumstance persons under the age of 13
     may use this Application.
+
+    <p><strong>Required permissions</strong></p>
+    <p>android.permission.REQUEST_DELETE_PACKAGES - Permission is required to be able to remove the application from its settings </p>
+    <p>android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS - Allows you to request that background work restrictions be ignored</p>
+    <p>android.permission.QUERY_ALL_PACKAGES - The resolution needed to show the list of installed applications </p>
+    <p>android.permission.INTERNET - Permission to access the Internet. Necessary for sending analytics and displaying ads </p>
+    <p>com.google.android.gms.permission.AD_ID - Permission to access the advertising identifier</p>
+    <p>android.permission.ACCESS_NETWORK_STATE - Permission for network status information </p>
+    <p>android.permission.WAKE_LOCK - Permission to control the wake lock </p>
+    <p>android.permission.RECEIVE_BOOT_COMPLETED - Permission to receive information about turning on the device</p>
+    <p>android.permission.FOREGROUND_SERVICE - Permission to run services</p>
+
+
 </p></div> <!----> <p><strong>Changes to This Privacy Policy</strong></p> <p>
     I may update our Privacy Policy from
     time to time. Thus, you are advised to review this page
