--- a/screenretainer_terms.htm
+++ b/screenretainer_terms.htm
@@ -1,5 +1,5 @@
 <html data-lt-installed="true"><head>
-<link rel="icon" href="wtmp_icon.ico"><!-- 32×32 -->
+<link rel="icon" href="screenRetainerIcon.ico"><!-- 32×32 -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 
