Updated terms and privacy for My dictionary and added icon

--- a/my_dictionary_terms.htm
+++ b/my_dictionary_terms.htm
@@ -1,5 +1,5 @@
 <html data-lt-installed="true"><head>
-<link rel="icon" href="Your dictionary_icon.ico"><!-- 32×32 -->
+<link rel="icon" href="my_dictionary_icon.ico"><!-- 32×32 -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 
@@ -1022,7 +1022,7 @@ a.contact:hover {
 <!-- <meta property="og:image" content="" /> -->
 <meta content="" property="og:description">
 <meta content="" name="description">
-<title>Your dictionary - Terms of Use</title>
+<title>My dictionary  - Terms of Use</title>
 <link href="terms_files/css.css" rel="stylesheet">
 </head>
 <body class="vsc-initialized" style="background:#222;margin:0;">
@@ -1056,7 +1056,7 @@ a.contact:hover {
     charge you for the app or its services without making it very
     clear to you exactly what you’re paying for.
 </p> <p>
-    The Your dictionary app stores and processes personal data that
+    The My dictionary  app stores and processes personal data that
     you have provided to us, to provide my
     Service. It’s your responsibility to keep your phone and
     access to the app secure. We therefore recommend that you do
@@ -1065,7 +1065,7 @@ a.contact:hover {
     official operating system of your device. It could make your
     phone vulnerable to malware/viruses/malicious programs,
     compromise your phone’s security features and it could mean
-    that the Your dictionary app won’t work properly or at all.
+    that the My dictionary  app won’t work properly or at all.
 </p> <div><p>
     The app does use third-party services that declare their
     Terms and Conditions.
